--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite + React + TS</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
+    <meta content="script-src 'self'" http-equiv="Content-Security-Policy" />
+    <!-- Analytics -->
+    <script async data-goatcounter="https://analytics.dev.igornadj.io/count" src="//analytics.dev.igornadj.io/count.js"></script>
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script src="/src/main.tsx" type="module"></script>
 </body>
 </html>
