Make ui a bit nicer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite + React + TS</title>
     <meta content="script-src 'self'" http-equiv="Content-Security-Policy" />
+
+    <!-- Fonts first to prevent FOUT -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- Analytics -->
     <script async data-goatcounter="https://analytics.dev.igornadj.io/count" src="//analytics.dev.igornadj.io/count.js"></script>
+  <style>
+    html, body { height: 100%; margin: 0; overflow: hidden; }
+    #root { height: 100%; }
+  </style>
 </head>
 <body>
 <div id="root"></div>
