--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite + React + TS</title>
-    <meta content="script-src 'self'" http-equiv="Content-Security-Policy" />
+    <meta content="script-src 'self' analytics.dev.igornadj.io" http-equiv="Content-Security-Policy" />
 
     <!-- Fonts first to prevent FOUT -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
