--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite + React + TS</title>
@@ -13,13 +13,15 @@
 
     <!-- Analytics -->
     <script async data-goatcounter="https://analytics.dev.igornadj.io/count" src="//analytics.dev.igornadj.io/count.js"></script>
-  <style>
-    html, body { height: 100%; margin: 0; overflow: hidden; }
-    #root { height: 100%; }
-  </style>
-</head>
-<body>
-<div id="root"></div>
-<script src="/src/main.tsx" type="module"></script>
-</body>
+
+    <!-- CSS Reset -->
+    <style>
+      html, body { height: 100%; margin: 0; overflow: hidden; }
+      #root { height: 100%; }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="/src/main.tsx" type="module"></script>
+  </body>
 </html>
