--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Vite + React + TS</title>
-    <meta content="script-src 'self' analytics.dev.igornadj.io" http-equiv="Content-Security-Policy" />
+<head>
+  <meta charset="UTF-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>Anycal</title>
+  <meta content="script-src 'self' analytics.dev.igornadj.io" http-equiv="Content-Security-Policy" />
 
-    <!-- Fonts first to prevent FOUT -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- Fonts first to prevent FOUT -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- Analytics -->
-    <script async data-goatcounter="https://analytics.dev.igornadj.io/count" src="//analytics.dev.igornadj.io/count.js"></script>
+  <!-- Analytics -->
+  <script async data-goatcounter="https://analytics.dev.igornadj.io/count" src="//analytics.dev.igornadj.io/count.js"></script>
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="/src/main.tsx" type="module"></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+<script src="/src/main.tsx" type="module"></script>
+</body>
 </html>
